# bismuth

./: .gitignore  .ignore  CLAUDE.md  GOOGLE_CALENDAR_SYNC_PLAN.md  bunfig.toml  gen-univer-icons.ts  package.json  tsconfig.base.json
.githooks/: pre-push
app/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
app/.storybook/: README.md  main.ts  preview-head.html  preview.ts
app/scripts/: build-bismuth-tools.ts  build-core-sidecar.ts  build-daemon-sidecar.ts  buildUtils.ts  bundle-claudebot.ts  bundle-relay.ts  gen-dock-icons.ts  gen-logos.ts  logoMarks.test.ts  logoMarks.ts  open-installer.ts  predmg-clean.ts  signingIdentity.ts  tauri.ts
app/src/: App.css  App.tsx  (+174 more)
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs
bench/: bench.ts
cli/: package.json  tsconfig.json
core/: package.json  tsconfig.json
daemon/: package.json  tsconfig.json
docs/: README.md  bismuth-changes-shipped.md
mcp/: package.json  tsconfig.json
memory/: package.json  tsconfig.json
relay/: .gitignore  .mcp.json  CLAUDE.md  package.json  tsconfig.json
sample-vault/: housing.md  internship.md
scripts/: audit.sh  board-dashboard.sh  board-scan.sh  board-write.sh  check-docs.ts  done-cleanup.sh  gc-worktrees.sh  gen-emoji.ts  gen-univer-icons.ts  lane-status.sh  merge-card.sh  merge-card.test.sh  operator-tick.sh  plan-lanes.sh  preflight.sh  previews.sh  previews.test.ts  regression-guard.sh  rollback-card.sh  shipped-log.sh  verify-test-red.sh
(+818 files in other folders)
